--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
     
@@ -55,14 +55,14 @@
             </div>
 
             <div id="cv-container">
-                <div id="cv-area"><p><a href="../images/resume.pdf" download class="btn cv"><i class="uil uil-file-download"></i>Download CV</a></p></div>
+                <div id="cv-area"><p><a href="images/resume.pdf" download class="btn cv"><i class="uil uil-file-download"></i>Download CV</a></p></div>
             </div>
         </div>
 
         <div class="profile"> 
             <div class = "space"></div>
             <div class="icon">
-                <img src="../images/pfp_icon.jpg">
+                <img src="images/pfp_icon.jpg">
             </div>
         </div>
 
