--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="profile"> 
             <div class = "space"></div>
             <div class="icon">
-                <img src="images/pfp_icon.jpg">
+                <img src="images/pfp_icon.JPG">
             </div>
         </div>
 
@@ -74,7 +74,7 @@
         <h1 class="head-title">About</h1>
         <div class="container">
             <div class="image">
-                <img src="\images\img2.jpg" alt="Profile Picture">
+                <img src="images/img2.JPG" alt="Profile Picture">
             </div>
 
             <div class="info">
