--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="face face1">
             <div class="content">
             <div class="icon">
-                <img class="project-card" src="/images/trivia-quiz.png" alt="Trivia Quiz" />
+                <img class="project-card" src="images/trivia-quiz.png" alt="Trivia Quiz" />
             </div>
             </div>
         </div>
@@ -158,7 +158,7 @@
         <div class="face face1">
             <div class="content">
             <div class="icon">
-                <img class="project-card" src="/images/dictionary-app.png" alt="Dictionary App" />
+                <img class="project-card" src="images/dictionary-app.png" alt="Dictionary App" />
             </div>
             </div>
         </div>
@@ -181,7 +181,7 @@
         <div class="cert-card">
             <h4>Computer Systems Servicing</h4>
             <div class="cert-image">
-                <img class="img-modal" src="/images/nc-cert.jpeg" data-zoom alt="Certification 1">          
+                <img class="img-modal" src="images/nc-cert.jpeg" data-zoom alt="Certification 1">          
                 <div class="overlay"></div>
             </div>
         </div>
@@ -204,7 +204,7 @@
         <div class="cert-card">
         <h4>Introduction to Python</h4>
         <div class="cert-image">
-            <img class="img-modal" src="/images/python-cert.jpg" alt="Certification 2">
+            <img class="img-modal" src="images/python-cert.jpg" alt="Certification 2">
             <div class="overlay"></div>
         </div>
         </div>
@@ -212,7 +212,7 @@
         <div class="cert-card">
         <h4>Full-Stack Development</h4>
         <div class="cert-image">
-            <img class="img-modal" src="/images/fullstack-cert.jpg" alt="Certification 3">
+            <img class="img-modal" src="images/fullstack-cert.jpg" alt="Certification 3">
             <div class="overlay"></div>
         </div>
         </div>
@@ -220,7 +220,7 @@
         <div class="cert-card">
         <h4>Introduction to SQL</h4>
         <div class="cert-image">
-            <img class="img-modal" src="/images/sql-cert.jpg" alt="Certification 4">
+            <img class="img-modal" src="images/sql-cert.jpg" alt="Certification 4">
             <div class="overlay"></div>
         </div>
         </div>
