--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="info">
-            <h1>Aspiring Software Developer</h1>
+            <h1>Aspiring Web Developer</h1>
             
             <div id="landing-text">
                 <h3>Hi, I'm Sol-Anzh</h3>
