--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
+
+<style>
+  @media (max-width: 768px) {
+    nav ul {
+      display: none;
+    }
+  }
+</style>
+    
 </head>
 <body>
     
