--- a/index.html
+++ b/index.html
@@ -257,27 +257,25 @@
     </footer>
                 
 <script>
-
   document.addEventListener('DOMContentLoaded', () => {
     const menuBtn = document.getElementById('menu-btn');
     const closeBtn = document.getElementById('close-btn');
     const navMenu = document.querySelector('nav ul');
 
     menuBtn.addEventListener('click', () => {
-      navMenu.style.display = 'flex';
+      navMenu.classList.add('show');
       menuBtn.style.display = 'none';
       closeBtn.style.display = 'flex';
     });
 
     closeBtn.addEventListener('click', () => {
-      navMenu.style.display = 'none';
+      navMenu.classList.remove('show');
       menuBtn.style.display = 'flex';
       closeBtn.style.display = 'none';
     });
   });
-
-
 </script>
+
 
 
 </body>
