--- a/index.html
+++ b/index.html
@@ -257,23 +257,22 @@
     </footer>
                 
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const menuBtn = document.getElementById('menu-btn');
-    const closeBtn = document.getElementById('close-btn');
-    const navMenu = document.querySelector('nav ul');
+const menuBtn = document.getElementById("menu-btn");
+const closeBtn = document.getElementById("close-btn");
+const navMenu = document.querySelector("nav ul");
 
-    menuBtn.addEventListener('click', () => {
-      navMenu.classList.add('show');
-      menuBtn.style.display = 'none';
-      closeBtn.style.display = 'flex';
-    });
+menuBtn.addEventListener("click", () => {
+  navMenu.classList.add("show");
+  menuBtn.style.display = "none";
+  closeBtn.style.display = "flex";
+});
 
-    closeBtn.addEventListener('click', () => {
-      navMenu.classList.remove('show');
-      menuBtn.style.display = 'flex';
-      closeBtn.style.display = 'none';
-    });
-  });
+closeBtn.addEventListener("click", () => {
+  navMenu.classList.remove("show");
+  menuBtn.style.display = "flex";
+  closeBtn.style.display = "none";
+});
+
 </script>
 
 
