--- a/index.html
+++ b/index.html
@@ -255,23 +255,27 @@
             </div>
         </div>
     </footer>
-                
+
 <script>
-const menuBtn = document.getElementById("menu-btn");
-const closeBtn = document.getElementById("close-btn");
-const navMenu = document.querySelector("nav ul");
 
-menuBtn.addEventListener("click", () => {
-  navMenu.classList.add("show");
-  menuBtn.style.display = "none";
-  closeBtn.style.display = "flex";
-});
+  document.addEventListener('DOMContentLoaded', () => {
+    const menuBtn = document.getElementById('menu-btn');
+    const closeBtn = document.getElementById('close-btn');
+    const navMenu = document.querySelector('nav ul');
 
-closeBtn.addEventListener("click", () => {
-  navMenu.classList.remove("show");
-  menuBtn.style.display = "flex";
-  closeBtn.style.display = "none";
-});
+    menuBtn.addEventListener('click', () => {
+      navMenu.style.display = 'flex';
+      menuBtn.style.display = 'none';
+      closeBtn.style.display = 'flex';
+    });
+
+    closeBtn.addEventListener('click', () => {
+      navMenu.style.display = 'none';
+      menuBtn.style.display = 'flex';
+      closeBtn.style.display = 'none';
+    });
+  });
+
 
 </script>
 
