--- a/index.html
+++ b/index.html
@@ -258,23 +258,22 @@
 
 <script>
 
-  document.addEventListener('DOMContentLoaded', () => {
-    const menuBtn = document.getElementById('menu-btn');
-    const closeBtn = document.getElementById('close-btn');
-    const navMenu = document.querySelector('nav ul');
+    const menuBtn = document.querySelector('#menu-btn');
+    const closeBtn = document.querySelector('#close-btn');
+    const menu = document.querySelector('nav .container ul');
 
     menuBtn.addEventListener('click', () => {
-      navMenu.style.display = 'flex';
+      menu.style.display = 'block';
       menuBtn.style.display = 'none';
-      closeBtn.style.display = 'flex';
+      closeBtn.style.display = 'inline-block';
     });
 
     closeBtn.addEventListener('click', () => {
-      navMenu.style.display = 'none';
-      menuBtn.style.display = 'flex';
+      menu.style.display = 'none';
+      menuBtn.style.display = 'inline-block';
       closeBtn.style.display = 'none';
     });
-  });
+  
 
 
 </script>
