--- a/index.html
+++ b/index.html
@@ -258,25 +258,24 @@
     </footer>
 
 <script>
-    
-
-    const menuBtn = document.querySelector('#menu-btn');
-    const closeBtn = document.querySelector('#close-btn');
-    const menu = document.querySelector('nav .container ul');
+   document.addEventListener('DOMContentLoaded', () => {
+    const menuBtn = document.getElementById('menu-btn');
+    const closeBtn = document.getElementById('close-btn');
+    const navMenu = document.querySelector('nav ul');
 
     menuBtn.addEventListener('click', () => {
-      menu.style.display = 'block';
+      navMenu.style.display = 'flex';
       menuBtn.style.display = 'none';
-      closeBtn.style.display = 'inline-block';
+      closeBtn.style.display = 'flex';
     });
 
     closeBtn.addEventListener('click', () => {
-      menu.style.display = 'none';
-      menuBtn.style.display = 'inline-block';
+      navMenu.style.display = 'none';
+      menuBtn.style.display = 'flex';
       closeBtn.style.display = 'none';
     });
+  });
   
-
 
 </script>
 
