--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand">
+    <nav>
         <div class="container">
             <h3>      </h3>
             <ul>
